<resources>
    <string name="app_name">유자네 쥬얼리 계산소</string>

<!--네비게이션 이름-->
    <string name="calculator">계산기</string>
    <string name="goodsList">물품리스트</string>

<!--계산기 종류-->
    <string name="calculator_marketcondition">가격 계산기</string>
    <string name="calculator_realmargin">실 마진 계산기</string>
    <string name="formula">계산식</string>
    <string name="addFormula">계산식 추가</string>

<!--계산기 스트링-->
    <string name="gold_kind">금 종류</string>
    <string name="gold_market_condition_1">금 시세</string>
    <string name="gold_market_condition_2">(24k 1돈 기준)</string>
    <string name="gold_mount_1">중량</string>
    <string name="gold_mount_2">(단위 g)</string>
    <string name="gold_margin">마 진</string>
    <string name="gold_wage">공 임</string>
    <string name="calculatePrice">계산금액</string>

    <string name="calculate">계산하기</string>
    <string name="reset">초기화</string>
    <string name="gold_price">계산금액 : </string>
    <string name="gold_price_add_tax">스토어팜 판매가 : </string>
    <string name="won">원</string>
    <string name="save">저장</string>

<!--실마진 계산기-->
    <string name="changeList">변경사항(선택)</string>

    <string name="sale_price">판매 가격</string>
    <string name="realMargin_price">실제 마진 : </string>
</resources>